lint-staged test

--- a/docs/src/content/en/docs/mcp/overview.mdx
+++ b/docs/src/content/en/docs/mcp/overview.mdx
@@ -20,7 +20,7 @@ Mastra currently supports two MCP classes:
 1. `MCPClient`: Connects to one or many MCP servers to access their tools, resources, prompts, and handle elicitation requests.
 1. `MCPServer`: Exposes Mastra tools, agents, workflows, prompts, and resources to MCP-compatible clients.
 
-## Getting started
+## Get started
 
 To use MCP, install the required dependency:
 
