--- a/docs/src/content/en/docs/agents/networks.mdx
+++ b/docs/src/content/en/docs/agents/networks.mdx
@@ -188,7 +188,7 @@ for await (const chunk of result) {
 }
 ```
 
-#### Workflow output
+### Workflow output
 
 The following `chunk.type` events are emitted during this request:
 
