--- a/docs/src/content/en/docs/memory/semantic-recall.mdx
+++ b/docs/src/content/en/docs/memory/semantic-recall.mdx
@@ -142,7 +142,7 @@ const agent = new Agent({
 
 Semantic recall relies on an [embedding model](/reference/memory/memory-class) to convert messages into embeddings. Mastra supports embedding models through the model router using `provider/model` strings, or you can use any [embedding model](https://sdk.vercel.ai/docs/ai-sdk-core/embeddings) compatible with the AI SDK.
 
-#### Using the Model Router (Recommended)
+### Using the Model Router (Recommended)
 
 The simplest way is to use a `provider/model` string with autocomplete support:
 
@@ -165,7 +165,7 @@ Supported embedding models:
 
 The model router automatically handles API key detection from environment variables (`OPENAI_API_KEY`, `GOOGLE_GENERATIVE_AI_API_KEY`).
 
-#### Using AI SDK Packages
+### Using AI SDK Packages
 
 You can also use AI SDK embedding models directly:
 
@@ -181,7 +181,7 @@ const agent = new Agent({
 })
 ```
 
-#### Using FastEmbed (Local)
+### Using FastEmbed (Local)
 
 To use FastEmbed (a local embedding model), install `@mastra/fastembed`:
 
