--- a/docs/src/content/en/docs/workflows/human-in-the-loop.mdx
+++ b/docs/src/content/en/docs/workflows/human-in-the-loop.mdx
@@ -84,9 +84,9 @@ if (result.status === 'suspended') {
 }
 ```
 
-**Example output**
+### Example output
 
-The data returned by the step can include a reason and help the user understand what’s needed to resume the workflow.
+The data returned by the step can include a reason and help the user understand what's needed to resume the workflow.
 
 ```typescript
 {
