--- a/docs/src/content/en/guides/migrations/agentnetwork.mdx
+++ b/docs/src/content/en/guides/migrations/agentnetwork.mdx
@@ -7,7 +7,7 @@ description: "Learn how to migrate from AgentNetwork primitives to .network() in
 
 As of `v0.20.0` for `@mastra/core`, the following changes apply.
 
-### Upgrade from AI SDK v4 to v5
+## Upgrade from AI SDK v4 to v5
 
 - Bump all your model provider packages by a major version.
 
@@ -17,7 +17,7 @@ This will ensure that they are all v5 models now.
 
 :::
 
-### Memory is required
+## Memory is required
 
 - Memory is now required for the agent network to function properly.
 
