--- a/docs/src/content/en/reference/evals/context-precision.mdx
+++ b/docs/src/content/en/reference/evals/context-precision.mdx
@@ -14,7 +14,7 @@ The `createContextPrecisionScorer()` function creates a scorer that evaluates ho
 
 It is especially useful for these use cases:
 
-**RAG System Evaluation**
+## RAG System Evaluation
 
 Ideal for evaluating retrieved context in RAG pipelines where:
 
@@ -22,7 +22,7 @@ Ideal for evaluating retrieved context in RAG pipelines where:
 - You need to measure retrieval quality beyond simple relevance
 - Early relevant context is more valuable than later relevant context
 
-**Context Window Optimization**
+## Context Window Optimization
 
 Use when optimizing context selection for:
 
