--- a/docs/src/content/en/reference/evals/context-relevance.mdx
+++ b/docs/src/content/en/reference/evals/context-relevance.mdx
@@ -13,7 +13,7 @@ The `createContextRelevanceScorerLLM()` function creates a scorer that evaluates
 
 It is especially useful for these use cases:
 
-**Content Generation Evaluation**
+## Content Generation Evaluation
 
 Best for evaluating context quality in:
 
@@ -21,7 +21,7 @@ Best for evaluating context quality in:
 - RAG pipelines needing nuanced relevance assessment
 - Systems where missing context affects quality
 
-**Context Selection Optimization**
+## Context Selection Optimization
 
 Use when optimizing for:
 
