--- a/docs/src/content/en/reference/tools/mcp-client.mdx
+++ b/docs/src/content/en/reference/tools/mcp-client.mdx
@@ -331,7 +331,7 @@ mcpClient.elicitation.onRequest('serverName', async request => {
 
 Sets up a handler function that will be called when any connected MCP server sends an elicitation request. The handler receives the request and must return a response.
 
-**ElicitationHandler Function:**
+##### ElicitationHandler Function
 
 The handler function receives a request object with:
 
