--- a/docs/src/content/en/reference/voice/google.mdx
+++ b/docs/src/content/en/reference/voice/google.mdx
@@ -307,9 +307,9 @@ const voice = new GoogleVoice({
 })
 ```
 
-**Required Permissions:**
+#### Required Permissions
 
-**IAM Roles:**
+#### IAM Roles
 
 For Text-to-Speech:
 
@@ -321,7 +321,7 @@ For Speech-to-Text:
 
 - `roles/speech.client` - Speech-to-Text Client
 
-**OAuth Scopes:**
+#### OAuth Scopes
 
 For synchronous Text-to-Speech synthesis:
 
