--- a/docs/src/content/en/guides/migrations/upgrade-to-v1/tracing.mdx
+++ b/docs/src/content/en/guides/migrations/upgrade-to-v1/tracing.mdx
@@ -64,7 +64,7 @@ export const mastra = new Mastra({
 
 This configuration includes `DefaultExporter`, `CloudExporter`, and `SensitiveDataFilter` processor. See the [observability tracing documentation](/docs/observability/tracing/overview) for full configuration options.
 
-**After (v1 with custom configuration):**
+#### After (v1 with custom configuration)
 
 If you need to configure specific exporters (like OTLP), install the exporter package and configure it:
 
@@ -257,7 +257,7 @@ To migrate, use the built-in exporter system or implement custom exporters using
 
 If you were using `instrumentation.mjs` files to initialize OpenTelemetry instrumentation (common in deployment setups like AWS Lambda), these are no longer needed. The new observability system is configured directly in your Mastra instance.
 
-**Before (0.x):**
+#### Before (0.x)
 
 You needed an instrumentation file:
 
@@ -273,7 +273,7 @@ And had to import it when starting your process:
 node --import=./.mastra/output/instrumentation.mjs --env-file=".env" .mastra/output/index.mjs
 ```
 
-**After (v1):**
+#### After (v1)
 
 Simply remove the `instrumentation.mjs` file and configure observability in your Mastra instance:
 
