--- a/docs/src/content/en/guides/migrations/vnext-to-standard-apis.mdx
+++ b/docs/src/content/en/guides/migrations/vnext-to-standard-apis.mdx
@@ -102,7 +102,7 @@ See the following API references for more information:
 
 ### Format control
 
-**Legacy APIs**
+#### Legacy APIs
 
 No `format` option: Always return AI SDK v4 types
 
@@ -111,7 +111,7 @@ No `format` option: Always return AI SDK v4 types
 const result = await agent.stream(messages)
 ```
 
-**Standard APIs**
+#### Standard APIs
 
 Use `format` option to choose output:
 
