--- a/docs/src/content/en/docs/agents/agent-approval.mdx
+++ b/docs/src/content/en/docs/agents/agent-approval.mdx
@@ -377,6 +377,199 @@ For automatic tool resumption to work:
 
 Both approaches work with the same tool definitions. Automatic resumption triggers only when suspended tools exist in the message history and the user sends a new message on the same thread.
 
+## Tool approval in supervisor pattern
+
+When using the supervisor pattern (multi-agent coordination via `.stream()` or `.generate()`), tool approvals properly propagate through the delegation chain. This means when a supervisor agent delegates to a sub-agent that uses a tool requiring approval, the approval request surfaces to the supervisor level where it can be handled.
+
+### How it works
+
+1. Supervisor delegates to sub-agent
+2. Sub-agent calls a tool with `requireApproval: true` or `suspend()`
+3. Approval request bubbles up through delegation chain
+4. You handle the approval at the supervisor level
+5. Approval/decline propagates back down to the sub-agent
+6. Sub-agent continues or terminates based on approval decision
+
+### Example
+
+```typescript
+import { Agent } from '@mastra/core/agent';
+import { createTool } from '@mastra/core/tools';
+import { Memory } from '@mastra/memory';
+import { z } from 'zod';
+
+// Sub-agent with approval-required tool
+const findUserTool = createTool({
+  id: 'find-user',
+  description: 'Finds user by ID in the database',
+  inputSchema: z.object({
+    userId: z.string(),
+  }),
+  outputSchema: z.object({
+    user: z.object({
+      id: z.string(),
+      name: z.string(),
+      email: z.string(),
+    }),
+  }),
+  requireApproval: true,  // Requires approval before execution
+  execute: async (input) => {
+    const user = await database.findUser(input.userId);
+    return { user };
+  },
+});
+
+const dataAgent = new Agent({
+  id: 'data-agent',
+  name: 'Data Agent',
+  description: 'Handles database queries and user data retrieval',
+  model: 'openai/gpt-4o-mini',
+  tools: { findUserTool },
+});
+
+const supervisorAgent = new Agent({
+  id: 'supervisor',
+  name: 'Supervisor Agent',
+  instructions: `You coordinate data retrieval tasks.
+    Delegate to data-agent for user lookups.`,
+  model: 'openai/gpt-5.1',
+  agents: { dataAgent },
+  memory: new Memory(),
+});
+
+// When supervisor delegates to dataAgent and tool requires approval
+const stream = await supervisorAgent.stream("Find user with ID 12345");
+
+for await (const chunk of stream.fullStream) {
+  if (chunk.type === 'tool-call-approval') {
+    console.log('Tool requires approval:', chunk.payload.toolName);
+    console.log('Arguments:', chunk.payload.args);
+
+    // Approve the tool call
+    const resumeStream = await supervisorAgent.approveToolCall({
+      runId: stream.runId,
+      toolCallId: chunk.payload.toolCallId,
+    });
+
+    // Process resumed stream
+    for await (const resumeChunk of resumeStream.textStream) {
+      process.stdout.write(resumeChunk);
+    }
+  }
+}
+```
+
+### Declining tool calls in supervisor pattern
+
+You can also decline tool calls at the supervisor level:
+
+```typescript
+for await (const chunk of stream.fullStream) {
+  if (chunk.type === 'tool-call-approval') {
+    console.log('Declining tool call:', chunk.payload.toolName);
+
+    // Decline the tool call
+    const declineStream = await supervisorAgent.declineToolCall({
+      runId: stream.runId,
+      toolCallId: chunk.payload.toolCallId,
+    });
+
+    // The supervisor will respond acknowledging the declined tool
+    for await (const declineChunk of declineStream.textStream) {
+      process.stdout.write(declineChunk);
+    }
+  }
+}
+```
+
+### Using suspend() in supervisor pattern
+
+The `suspend()` approach also works through the supervisor delegation chain:
+
+```typescript
+const conditionalTool = createTool({
+  id: 'conditional-operation',
+  description: 'Performs an operation that may require confirmation',
+  inputSchema: z.object({
+    operation: z.string(),
+  }),
+  suspendSchema: z.object({
+    message: z.string(),
+  }),
+  resumeSchema: z.object({
+    confirmed: z.boolean(),
+  }),
+  execute: async (input, context) => {
+    const { resumeData } = context?.agent ?? {};
+
+    if (!resumeData?.confirmed) {
+      return context?.agent?.suspend({
+        message: `Confirm: ${input.operation}?`,
+      });
+    }
+
+    // Proceed with operation
+    return await performOperation(input.operation);
+  },
+});
+
+// When using this tool through a sub-agent in supervisor pattern
+for await (const chunk of stream.fullStream) {
+  if (chunk.type === 'tool-call-suspended') {
+    console.log('Tool suspended:', chunk.payload.suspendPayload.message);
+
+    // Resume with confirmation
+    const resumeStream = await supervisorAgent.resumeStream(
+      { confirmed: true },
+      { runId: stream.runId }
+    );
+
+    for await (const resumeChunk of resumeStream.textStream) {
+      process.stdout.write(resumeChunk);
+    }
+  }
+}
+```
+
+### Tool approval with generate()
+
+Tool approval propagation also works with `generate()` in supervisor pattern:
+
+```typescript
+const output = await supervisorAgent.generate("Find user with ID 12345", {
+  maxSteps: 10,
+});
+
+if (output.finishReason === 'suspended') {
+  console.log('Tool requires approval:', output.suspendPayload.toolName);
+
+  // Approve
+  const result = await supervisorAgent.approveToolCallGenerate({
+    runId: output.runId,
+    toolCallId: output.suspendPayload.toolCallId,
+  });
+
+  console.log('Final result:', result.text);
+}
+```
+
+### Multi-level delegation
+
+Tool approvals propagate through multiple levels of delegation:
+
+```
+User Request
+  → Supervisor Agent
+    → Sub-Agent A
+      → Sub-Agent B (has tool with requireApproval: true)
+        → Tool requires approval
+      ← Approval bubbles up to supervisor level
+    ← You handle approval/decline at supervisor
+  ← Result flows back through delegation chain
+```
+
+The approval request will surface at the top-level supervisor, regardless of how deep the delegation chain goes.
+
 ## Related
 
 - [Using Tools](./using-tools)
