--- a/docs/src/content/en/docs/server/server-adapters.mdx
+++ b/docs/src/content/en/docs/server/server-adapters.mdx
@@ -262,7 +262,16 @@ const server = new MastraServer({
 });
 ```
 
-With this prefix, Mastra routes become `/api/v2/agents`, `/api/v2/workflows`, etc. Custom routes you add directly to the app are not affected by this prefix.
+With this prefix, Mastra routes become `/api/v2/agents`, `/api/v2/workflows`, etc. Mastra's context and auth middleware are also scoped to this prefix, so routes you add directly to the app are not affected.
+
+```typescript
+// Mastra handles /api/v2/* (with auth + context middleware)
+const server = new MastraServer({ app, mastra, prefix: '/api/v2' });
+await server.init();
+
+// Your own routes — no Mastra middleware runs here
+app.get('/health', (req, res) => res.json({ status: 'ok' }));
+```
 
 ## OpenAPI spec
 
