feat(core): add onStepFinish and onError callbacks to NetworkOptions
Signed-off-by: intojhanurag <aojharaj2004@gmail.com>

--- a/docs/src/content/en/reference/agents/network.mdx
+++ b/docs/src/content/en/reference/agents/network.mdx
@@ -315,6 +315,41 @@ await agent.network(`
       description:
         "The trace ID associated with this execution when Tracing is enabled. Use this to correlate logs and debug execution flow.",
     },
+    {
+      name: "onStepFinish",
+      type: "(event: any) => Promise<void> | void",
+      isOptional: true,
+      description:
+        "Callback fired after each LLM step within a sub-agent execution. Receives step details including finish reason and token usage.",
+    },
+    {
+      name: "onError",
+      type: "({ error }: { error: Error | string }) => Promise<void> | void",
+      isOptional: true,
+      description:
+        "Callback fired when an error occurs during sub-agent execution.",
+    },
+    {
+      name: "onIterationComplete",
+      type: "(context: { iteration: number; primitiveId: string; primitiveType: string; result: string; isComplete: boolean }) => void | Promise<void>",
+      isOptional: true,
+      description:
+        "Callback fired after each network iteration completes. Receives iteration details including which primitive was selected and the result.",
+    },
+    {
+      name: "onAbort",
+      type: "(event: any) => Promise<void> | void",
+      isOptional: true,
+      description:
+        "Callback fired when the streaming operation is aborted.",
+    },
+    {
+      name: "abortSignal",
+      type: "AbortSignal",
+      isOptional: true,
+      description:
+        "Signal to abort the streaming operation.",
+    },
   ]}
 />
 
